Changed the urls list to api_urls

--- a/scrape_past.ipynb
+++ b/scrape_past.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,21 +15,20 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "years = list(range(1990,2024))\n",
-        "urls = [f'https://www.nba.com/stats/leaders?Season={year}-{str(year+1)[-2:]}&SeasonType=Regular%20Season' for year in years]"
-      ],
+      "execution_count": 13,
       "metadata": {
         "id": "8XN8BcV06bnq"
       },
-      "execution_count": 13,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Creat list of URLs of the APIs to call in order to get pas season stats\n",
+        "years = list(range(1990,2024))\n",
+        "api_urls = [f\"https://stats.nba.com/stats/leagueLeaders?LeagueID=00&PerMode=PerGame&Scope=S&Season={year}-{str(year+1)[-2:]}&SeasonType=Regular%20Season&StatCategory=PTS\" for year in years]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "urls[0]"
-      ],
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -52,22 +37,36 @@
         "id": "0wXUbxRC9NOx",
         "outputId": "a5424a8f-43f3-420b-a811-aab9c7f7e5c0"
       },
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'https://www.nba.com/stats/leaders?Season=1990-91&SeasonType=Regular%20Season'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'https://www.nba.com/stats/leaders?Season=1990-91&SeasonType=Regular%20Season'"
+            ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 14
+          "output_type": "execute_result"
         }
-      ]
+      ],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
