Created function to get stats as JSON

--- a/scrape_past.ipynb
+++ b/scrape_past.ipynb
@@ -21,7 +21,7 @@
       },
       "outputs": [],
       "source": [
-        "# Creat list of URLs of the APIs to call in order to get pas season stats\n",
+        "# Create list of URLs of the APIs to call in order to get pas season stats\n",
         "years = list(range(1990,2024))\n",
         "api_urls = [f\"https://stats.nba.com/stats/leagueLeaders?LeagueID=00&PerMode=PerGame&Scope=S&Season={year}-{str(year+1)[-2:]}&SeasonType=Regular%20Season&StatCategory=PTS\" for year in years]"
       ]
@@ -52,7 +52,25 @@
           "output_type": "execute_result"
         }
       ],
-      "source": []
+      "source": [
+        "# Function to get JSON data\n",
+        "def get_data(url):\n",
+        "  response = requests.get(url)\n",
+        "  # Check the response status code\n",
+        "  if response.status_code == 200:\n",
+        "      # If successful, try parsing as JSON\n",
+        "      try:\n",
+        "          data = response.json()\n",
+        "      except requests.exceptions.JSONDecodeError:\n",
+        "          print(\"Response content is not valid JSON:\")\n",
+        "          print(response.text)\n",
+        "  else:\n",
+        "      # If error, print status code and content\n",
+        "      print(f\"Request failed with status code: {response.status_code}\")\n",
+        "      data = response.text\n",
+        "\n",
+        "  return data"
+      ]
     }
   ],
   "metadata": {
