--- a/scrape_past.ipynb
+++ b/scrape_past.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -37,39 +37,42 @@
         "id": "0wXUbxRC9NOx",
         "outputId": "a5424a8f-43f3-420b-a811-aab9c7f7e5c0"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'https://www.nba.com/stats/leaders?Season=1990-91&SeasonType=Regular%20Season'"
-            ]
-          },
-          "execution_count": 14,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Function to get JSON data\n",
         "def get_data(url):\n",
-        "  response = requests.get(url)\n",
-        "  # Check the response status code\n",
-        "  if response.status_code == 200:\n",
-        "      # If successful, try parsing as JSON\n",
-        "      try:\n",
-        "          data = response.json()\n",
-        "      except requests.exceptions.JSONDecodeError:\n",
-        "          print(\"Response content is not valid JSON:\")\n",
-        "          print(response.text)\n",
-        "  else:\n",
-        "      # If error, print status code and content\n",
-        "      print(f\"Request failed with status code: {response.status_code}\")\n",
-        "      data = response.text\n",
+        "    response = requests.get(url)\n",
+        "    # Check the response status code\n",
+        "    if response.status_code == 200:\n",
+        "        # If successful, try parsing as JSON\n",
+        "        try:\n",
+        "            data = response.json()\n",
+        "        except requests.exceptions.JSONDecodeError:\n",
+        "            print(\"Response content is not valid JSON:\")\n",
+        "            print(response.text)\n",
+        "    else:\n",
+        "        # If error, print status code and content\n",
+        "        print(f\"Request failed with status code: {response.status_code}\")\n",
+        "        data = response.text\n",
         "\n",
-        "  return data"
+        "    return data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Function to make a pandas dataframe with the stats\n",
+        "def create_df(data, year):\n",
+        "    # Get the table headers and stats from the JSON data\n",
+        "    headers = data['resultSet']['headers']\n",
+        "    stats = data['resultSet']['rowSet']\n",
+        "    # Create the dataframe\n",
+        "    df = pd.DataFrame(stats, columns=headers)\n",
+        "    df['Year'] = year\n",
+        "    return df"
       ]
     }
   ],
