Created CSV files

--- a/scrape_past.ipynb
+++ b/scrape_past.ipynb
@@ -74,6 +74,22 @@
         "    df['Year'] = year\n",
         "    return df"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create a folder to store all the data\n",
+        "os.makedirs(\"nba_stats\", exist_ok=True)\n",
+        "\n",
+        "# Loop through api_urls and create CSV files\n",
+        "for i in range(len(years)):\n",
+        "  data = get_data(api_urls[i])\n",
+        "  df = create_csv(data, years[i])\n",
+        "  df.to_csv(f\"nba_stats/{years[i]}-{str(years[i]+1)[-2:]}.csv\", index=False)"
+      ]
     }
   ],
   "metadata": {
