Just put URLs in the for loop

--- a/scrape_past.ipynb
+++ b/scrape_past.ipynb
@@ -22,8 +22,7 @@
       "outputs": [],
       "source": [
         "# Create list of URLs of the APIs to call in order to get pas season stats\n",
-        "years = list(range(1990,2024))\n",
-        "api_urls = [f\"https://stats.nba.com/stats/leagueLeaders?LeagueID=00&PerMode=PerGame&Scope=S&Season={year}-{str(year+1)[-2:]}&SeasonType=Regular%20Season&StatCategory=PTS\" for year in years]"
+        "years = list(range(1990,2024))"
       ]
     },
     {
@@ -85,10 +84,10 @@
         "os.makedirs(\"nba_stats\", exist_ok=True)\n",
         "\n",
         "# Loop through api_urls and create CSV files\n",
-        "for i in range(len(years)):\n",
-        "  data = get_data(api_urls[i])\n",
-        "  df = create_csv(data, years[i])\n",
-        "  df.to_csv(f\"nba_stats/{years[i]}-{str(years[i]+1)[-2:]}.csv\", index=False)"
+        "for year in years:\n",
+        "  data = get_data(f\"https://stats.nba.com/stats/leagueLeaders?LeagueID=00&PerMode=PerGame&Scope=S&Season={year}-{str(year+1)[-2:]}&SeasonType=Regular%20Season&StatCategory=PTS\")\n",
+        "  df = create_csv(data, year)\n",
+        "  df.to_csv(f\"nba_stats/{year}-{str(year+1)[-2:]}.csv\", index=False)"
       ]
     }
   ],
