--- a/scrape_past.ipynb
+++ b/scrape_past.ipynb
@@ -86,7 +86,7 @@
         "# Loop through api_urls and create CSV files\n",
         "for year in years:\n",
         "  data = get_data(f\"https://stats.nba.com/stats/leagueLeaders?LeagueID=00&PerMode=PerGame&Scope=S&Season={year}-{str(year+1)[-2:]}&SeasonType=Regular%20Season&StatCategory=PTS\")\n",
-        "  df = create_csv(data, year)\n",
+        "  df = create_df(data, year)\n",
         "  df.to_csv(f\"nba_stats/{year}-{str(year+1)[-2:]}.csv\", index=False)"
       ]
     }
