Created loop to get data

--- a/scrape_mvps.ipynb
+++ b/scrape_mvps.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests, os, re, json\n",
@@ -19,11 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define function to get dataframe containing past top MVP candidates\n",
@@ -47,11 +39,36 @@
     "    df[\"Year\"] = year\n",
     "    return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create years list\n",
+    "years = list(range(2022,2024))\n",
+    "\n",
+    "# Create folder to contain mvp data\n",
+    "os.makedirs(\"past_mvps\", exist_ok=True)\n",
+    "\n",
+    "# Loop through the years and create CSV files to contain data from each year\n",
+    "for year in years:\n",
+    "    url = f\"https://www.basketball-reference.com/awards/awards_{year}.html\"\n",
+    "    data = get_df(url, year)\n",
+    "    data.to_csv(f\"past_mvps/mvps_{year}.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
