Scraped final MVP table

--- a/scrape_mvps.ipynb
+++ b/scrape_mvps.ipynb
@@ -58,6 +58,24 @@
     "    data = get_df(url, year)\n",
     "    data.to_csv(f\"past_mvps/mvps_{year}.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = f\"https://www.basketball-reference.com/awards/awards_2024.html\"\n",
+    "data = get_df(url, 2024)\n",
+    "data.to_csv(f\"past_mvps/mvps_2024.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
