--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_data(stat_df, mvp_df):\n",
+    "    stat_df.drop(columns=['TEAM', 'PLAYER_ID', 'TEAM_ID', 'RANK', 'Year'], inplace=True)\n",
+    "    mvp_df = mvp_df.rename(columns={\n",
+    "    'Player': 'PLAYER',\n",
+    "    'Rank': 'RANK',\n",
+    "    'Year': 'YEAR'\n",
+    "    })\n",
+    "    mvp_df = mvp_df[['PLAYER', 'YEAR', 'RANK']]\n",
+    "    mvp_df['RANK'] = (mvp_df['RANK'].index) + 1\n",
+    "    df_merged = pd.merge(stat_df, mvp_df, on='PLAYER', how='left')\n",
+    "    df_merged['YEAR'] = 2001\n",
+    "    df_merged['RANK'] = df_merged['RANK'].fillna(0)\n",
+    "    return df_merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,401 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stat_df.drop(columns=['TEAM', 'PLAYER_ID', 'TEAM_ID', 'RANK', 'Year'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PLAYER</th>\n",
-       "      <th>GP</th>\n",
-       "      <th>MIN</th>\n",
-       "      <th>FGM</th>\n",
-       "      <th>FGA</th>\n",
-       "      <th>FG_PCT</th>\n",
-       "      <th>FG3M</th>\n",
-       "      <th>FG3A</th>\n",
-       "      <th>FG3_PCT</th>\n",
-       "      <th>FTM</th>\n",
-       "      <th>...</th>\n",
-       "      <th>FT_PCT</th>\n",
-       "      <th>OREB</th>\n",
-       "      <th>DREB</th>\n",
-       "      <th>REB</th>\n",
-       "      <th>AST</th>\n",
-       "      <th>STL</th>\n",
-       "      <th>BLK</th>\n",
-       "      <th>TOV</th>\n",
-       "      <th>PTS</th>\n",
-       "      <th>EFF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Allen Iverson</td>\n",
-       "      <td>71</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>10.7</td>\n",
-       "      <td>25.5</td>\n",
-       "      <td>0.420</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>0.320</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.814</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>31.1</td>\n",
-       "      <td>22.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Jerry Stackhouse</td>\n",
-       "      <td>80</td>\n",
-       "      <td>40.2</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>24.1</td>\n",
-       "      <td>0.402</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>0.351</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.822</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>29.8</td>\n",
-       "      <td>20.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Shaquille O'Neal</td>\n",
-       "      <td>74</td>\n",
-       "      <td>39.5</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>19.2</td>\n",
-       "      <td>0.572</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.513</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>8.8</td>\n",
-       "      <td>12.7</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>28.7</td>\n",
-       "      <td>31.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Kobe Bryant</td>\n",
-       "      <td>68</td>\n",
-       "      <td>40.9</td>\n",
-       "      <td>10.3</td>\n",
-       "      <td>22.2</td>\n",
-       "      <td>0.464</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>0.305</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.853</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>28.5</td>\n",
-       "      <td>25.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Vince Carter</td>\n",
-       "      <td>75</td>\n",
-       "      <td>39.7</td>\n",
-       "      <td>10.2</td>\n",
-       "      <td>22.1</td>\n",
-       "      <td>0.460</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>0.408</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.765</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>27.6</td>\n",
-       "      <td>23.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             PLAYER  GP   MIN   FGM   FGA  FG_PCT  FG3M  FG3A  FG3_PCT  FTM  \\\n",
-       "0     Allen Iverson  71  42.0  10.7  25.5   0.420   1.4   4.3    0.320  8.2   \n",
-       "1  Jerry Stackhouse  80  40.2   9.7  24.1   0.402   2.1   5.9    0.351  8.3   \n",
-       "2  Shaquille O'Neal  74  39.5  11.0  19.2   0.572   0.0   0.0    0.000  6.7   \n",
-       "3       Kobe Bryant  68  40.9  10.3  22.2   0.464   0.9   2.9    0.305  7.0   \n",
-       "4      Vince Carter  75  39.7  10.2  22.1   0.460   2.2   5.3    0.408  5.1   \n",
-       "\n",
-       "   ...  FT_PCT  OREB  DREB   REB  AST  STL  BLK  TOV   PTS   EFF  \n",
-       "0  ...   0.814   0.7   3.1   3.8  4.6  2.5  0.3  3.3  31.1  22.3  \n",
-       "1  ...   0.822   1.2   2.7   3.9  5.1  1.2  0.7  4.1  29.8  20.4  \n",
-       "2  ...   0.513   3.9   8.8  12.7  3.7  0.6  2.8  2.9  28.7  31.0  \n",
-       "3  ...   0.853   1.5   4.3   5.9  5.0  1.7  0.6  3.2  28.5  25.3  \n",
-       "4  ...   0.765   2.3   3.2   5.5  3.9  1.5  1.1  2.2  27.6  23.9  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stat_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mvp_df = mvp_df.rename(columns={\n",
-    "    'Player': 'PLAYER',\n",
-    "    'Rank': 'RANK',\n",
-    "    'Year': 'YEAR'\n",
-    "})\n",
-    "mvp_df = mvp_df[['PLAYER', 'YEAR', 'RANK']]\n",
-    "mvp_df['RANK'] = (mvp_df['RANK'].index) + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PLAYER</th>\n",
-       "      <th>YEAR</th>\n",
-       "      <th>RANK</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Allen Iverson</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Tim Duncan</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Shaquille O'Neal</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chris Webber</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Kevin Garnett</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Tracy McGrady</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Karl Malone</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Jason Kidd</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Kobe Bryant</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>David Robinson</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Ray Allen</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Vince Carter</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Paul Pierce</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Jerry Stackhouse</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Michael Finley</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Anthony Mason</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>John Stockton</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              PLAYER  YEAR  RANK\n",
-       "0      Allen Iverson  2001     1\n",
-       "1         Tim Duncan  2001     2\n",
-       "2   Shaquille O'Neal  2001     3\n",
-       "3       Chris Webber  2001     4\n",
-       "4      Kevin Garnett  2001     5\n",
-       "5      Tracy McGrady  2001     6\n",
-       "6        Karl Malone  2001     7\n",
-       "7         Jason Kidd  2001     8\n",
-       "8        Kobe Bryant  2001     9\n",
-       "9     David Robinson  2001    10\n",
-       "10         Ray Allen  2001    11\n",
-       "11      Vince Carter  2001    12\n",
-       "12       Paul Pierce  2001    13\n",
-       "13  Jerry Stackhouse  2001    14\n",
-       "14    Michael Finley  2001    15\n",
-       "15     Anthony Mason  2001    16\n",
-       "16     John Stockton  2001    17"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mvp_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -736,24 +363,58 @@
        "[10 rows x 23 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_merged = pd.merge(stat_df, mvp_df, on='PLAYER', how='left')\n",
-    "df_merged['YEAR'] = 2001\n",
-    "df_merged['RANK'] = df_merged['RANK'].fillna(0)\n",
+    "df_merged = merge_data(stat_df, mvp_df)\n",
     "df_merged.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "years = list(range(1990,2024))\n",
+    "combined_past_data = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for year in years:\n",
+    "    stat_df = pd.read_csv(f'nba_stats/{year}-{str(year+1)[-2:]}.csv')\n",
+    "    mvp_df = pd.read_csv(f'past_mvps/mvps_{year+1}.csv')\n",
+    "    df_merged = merge_data(stat_df, mvp_df)\n",
+    "    combined_past_data = pd.concat([combined_past_data, df_merged])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7018, 23)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_past_data.shape"
+   ]
   }
  ],
  "metadata": {
