--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_data(stat_df, mvp_df):\n",
+    "def merge_data(stat_df, mvp_df, year):\n",
     "    stat_df.drop(columns=['TEAM', 'PLAYER_ID', 'TEAM_ID', 'RANK', 'Year'], inplace=True)\n",
     "    mvp_df = mvp_df.rename(columns={\n",
     "    'Player': 'PLAYER',\n",
@@ -25,14 +25,14 @@
     "    mvp_df = mvp_df[['PLAYER', 'YEAR', 'RANK']]\n",
     "    mvp_df['RANK'] = (mvp_df['RANK'].index) + 1\n",
     "    df_merged = pd.merge(stat_df, mvp_df, on='PLAYER', how='left')\n",
-    "    df_merged['YEAR'] = 2001\n",
+    "    df_merged['YEAR'] = year+1\n",
     "    df_merged['RANK'] = df_merged['RANK'].fillna(0)\n",
     "    return df_merged"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,25 +42,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "for year in years:\n",
     "    stat_df = pd.read_csv(f'nba_stats/{year}-{str(year+1)[-2:]}.csv')\n",
     "    mvp_df = pd.read_csv(f'past_mvps/mvps_{year+1}.csv')\n",
-    "    df_merged = merge_data(stat_df, mvp_df)\n",
+    "    df_merged = merge_data(stat_df, mvp_df, year)\n",
     "    combined_past_data = pd.concat([combined_past_data, df_merged])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "combined_past_data.to_csv(f\"combined_past_data.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
