Divided rank into 2 classes

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -11,6 +11,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify_rank(rank):\n",
+    "    if rank <= 3:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -24,6 +37,7 @@
     "    })\n",
     "    mvp_df = mvp_df[['PLAYER', 'YEAR', 'RANK']]\n",
     "    mvp_df['RANK'] = (mvp_df['RANK'].index) + 1\n",
+    "    mvp_df['RANK'] = mvp_df['RANK'].apply(classify_rank)\n",
     "    df_merged = pd.merge(stat_df, mvp_df, on='PLAYER', how='left')\n",
     "    df_merged['YEAR'] = year+1\n",
     "    df_merged['RANK'] = df_merged['RANK'].fillna(0)\n",
@@ -61,13 +75,6 @@
    "source": [
     "combined_past_data.to_csv(f\"combined_past_data.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
