Create and evaluate model

--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -21,7 +21,8 @@
     "import pandas as pd\n",
     "import xgboost as xgb\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -43,7 +44,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = xgb.XGBClassifier(use_label_encoder=False, eval_metric='mlogloss')\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model using accuracy\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "\n",
+    "# Print the accuracy\n",
+    "print(f\"Accuracy: {accuracy * 100:.2f}%\")"
+   ]
   }
  ],
  "metadata": {
